k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samsung-remote
spec:
  type: NodePort
  selector:
    app: samsung-remote
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
